refactor: controllers routes structure (#13)
* feat: teams crud

* feat: user teams crud

* feat: groups crud

* chore: removed hello api

* feat: user groups crud

* fix: remove hello endpoint from openapi

* refactor: departments, teams and groups controllers and routes
