# packages/db-api/src/routes/teamRoutes.ts
@@ -6,6 +6,10 @@ import {
   createTeam,
   updateTeam,
   deleteTeam,
+  deleteUserTeam,
+  getUsersForTeam,
+  getTeamsForUser,
+  assignUserTeam,
 } from '../controllers/teamController';
 import {
   authMiddleware,
@@ -15,6 +19,7 @@ import {
 const router = express.Router();
 
 router.use('/teams', authMiddleware);
+router.use('/userTeams', authMiddleware);
 
 router.get('/teams', authRolesMiddleware([UserRole.ADMIN]), getAllTeams);
 
@@ -25,5 +30,31 @@ router.post('/teams', authRolesMiddleware([UserRole.ADMIN]), createTeam);
 router.put('/teams/:id', authRolesMiddleware([UserRole.ADMIN]), updateTeam);
 
 router.delete('/teams/:id', authRolesMiddleware([UserRole.ADMIN]), deleteTeam);
+
+// userTeamRoutes
+
+router.post(
+  '/userTeams',
+  authRolesMiddleware([UserRole.ADMIN]),
+  assignUserTeam,
+);
+
+router.get(
+  '/userTeams/user/:userId',
+  authRolesMiddleware([UserRole.ADMIN]),
+  getTeamsForUser,
+);
+
+router.get(
+  '/userTeams/team/:teamId',
+  authRolesMiddleware([UserRole.ADMIN]),
+  getUsersForTeam,
+);
+
+router.delete(
+  '/userTeams/user/:userId/team/:teamId',
+  authRolesMiddleware([UserRole.ADMIN]),
+  deleteUserTeam,
+);
 
 export default router;
